--- a/src/app/home-page/side-nav/side-nav.component.css
+++ b/src/app/home-page/side-nav/side-nav.component.css
@@ -102,6 +102,11 @@ hr {
   cursor: pointer;
 }
 
+.submitSearch {
+  background-color: transparent;
+  border: none;
+}
+
 .matIcon {
   color: white;
   cursor: pointer;
