--- a/src/app/home-page/side-nav/side-nav.component.html
+++ b/src/app/home-page/side-nav/side-nav.component.html
@@ -1,8 +1,17 @@
 <nav>
   <h1>SC<span class="h1Span">OP</span>E</h1>
   <div class="searchDiv">
-    <mat-icon class="matIcon">search</mat-icon>
-    <input type="text" name="search" id="search" placeholder="Search" />
+    <input
+      type="text"
+      name="search"
+      id="search"
+      placeholder="Search"
+      [(ngModel)]="searchFieldValue"
+      (keyup.enter)="bind()"
+    />
+    <button type="submit" class="submitSearch" (click)="bind()">
+      <mat-icon class="matIcon">search</mat-icon>
+    </button>
   </div>
 
   <hr />
